@@ -18,6 +18,8 @@ Revision history for libev, a high-performance and full-featured event loop.
         - add portability requirements section.
 	- fix manpage headers etc.
         - normalise WSA error codes to lower range on windows.
+        - start some (internal only) consistency check code that
+          can be called frequently to catch bugs.
 
 3.31 Wed Apr 16 20:45:04 CEST 2008
 	- added last minute fix for ev_poll.c by Brandon Black.
